@@ -35,6 +35,9 @@ static int _vgs_single(struct cmd_context *cmd, const char *vg_name,
 static int _lvs_single(struct cmd_context *cmd, struct logical_volume *lv,
 		       void *handle)
 {
+	if (!arg_count(cmd, all_ARG) && !(lv->status & VISIBLE_LV))
+		return ECMD_PROCESSED;
+
 	if (!report_object(handle, lv->vg, lv, NULL, NULL, NULL))
 		return ECMD_FAILED;
 
@@ -78,6 +81,9 @@ static int _pvsegs_sub_single(struct cmd_context *cmd, struct volume_group *vg,
 static int _lvsegs_single(struct cmd_context *cmd, struct logical_volume *lv,
 			  void *handle)
 {
+	if (!arg_count(cmd, all_ARG) && !(lv->status & VISIBLE_LV))
+		return ECMD_PROCESSED;
+
 	return process_each_segment_in_lv(cmd, lv, handle, _segs_single);
 }
 
